package com.apuliasoft.designpattern.strategy.explanation;

public class ConcreteBehaviourA implements IBehaviour {
    public void run() {
        // Run behaviour A
    }
}